objects/ProductCharacteristic__c.object
<CustomObject>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in PB to initiate time-based workflow which sets Published__c to TRUE 0 Days after PublishDate__c</description>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AsOfDate__c</fullName>
        <description>The as of date of the Product Characteristic; set via integrations during creation</description>
        <label>As Of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cap__c</fullName>
        <label>Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CharacteristicsDataType__c</fullName>
        <description>Loaded during integration; used in trigger to formulate Product Characteristics Output Text and Index Characteristics Output Text</description>
        <label>Characteristics Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Integer</fullName>
                </value>
                <value>
                    <fullName>Decimal</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CouponRate__c</fullName>
        <description>Set via integrations during create if applicable</description>
        <label>Coupon Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gross__c</fullName>
        <label>Gross</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IndexCharacteristicsDecimal__c</fullName>
        <description>Holds the decimal (percent, integer, decimal) for the index from the characteristics file if the related value if a number; otherwise this is null.  Loaded from integration.</description>
        <label>Index Characteristics Decimal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IndexCharacteristicsInteger__c</fullName>
        <label>Index Characteristics Integer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IndexCharacteristicsOutputText__c</fullName>
        <description>Created by trigger on insert</description>
        <label>Index Characteristics Output Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndexCharacteristicsText__c</fullName>
        <description>Holds the text from the index characteristics file if the related value if a text; otherwise this is null.  Loaded from integration.</description>
        <label>Index Characteristics Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level1FullDescription__c</fullName>
        <description>Full description of Level 1; created during integration</description>
        <label>Level 1 Full Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level1__c</fullName>
        <description>Direct load from integration source</description>
        <label>Level 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level2__c</fullName>
        <description>Direct load from integration source</description>
        <label>Level 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level3__c</fullName>
        <description>Direct load from integration source</description>
        <label>Level 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long__c</fullName>
        <label>Long</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaturityDate__c</fullName>
        <description>Set via integrations during create if applicable</description>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Net__c</fullName>
        <label>Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PercentContributionToVolatility__c</fullName>
        <description>Direct load from integration source</description>
        <label>Percent Contribution To Volatility</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PercentExposure__c</fullName>
        <description>Direct load from integration source</description>
        <label>Percent Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PercentOfIndexDataAvailable__c</fullName>
        <label>Percent Of Index Data Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PercentOfIndex__c</fullName>
        <description>Direct load from integration source</description>
        <label>Percent Of Index</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PercentOfPortfolioDataAvailable__c</fullName>
        <label>Percent Of Portfolio Data Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PercentOfPortfolio__c</fullName>
        <description>Direct load from integration</description>
        <label>Percent Of Portfolio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductCharacteristicsDecimal__c</fullName>
        <description>Holds the decimal (percent, integer, decimal) for the product from the characteristics file if the related value if a number; otherwise this is null.  Loaded from integration.</description>
        <label>Product Characteristics Decimal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductCharacteristicsInteger__c</fullName>
        <label>Product Characteristics Integer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductCharacteristicsOutputText__c</fullName>
        <description>Created by trigger on insert</description>
        <label>Product Characteristics Output Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCharacteristicsText__c</fullName>
        <description>Holds the text from the product characteristics file if the related value if a text; otherwise this is null.  Loaded from integration.</description>
        <label>Product Characteristics Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Set via integrations during create.  Represents the Product to which this Product Characteristic belongs.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Characteristics</relationshipLabel>
        <relationshipName>ProductCharacteristics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PublishDate__c</fullName>
        <description>Set by Apex, used in PB to set Published__c</description>
        <label>Publish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Published__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls sharing for Product Characteristic records</description>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PublishingSchedule__c</fullName>
        <description>Used in Apex to set PublishDate__c</description>
        <label>Publishing Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CDRPublishingSchedule</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <description>Used for Top Ten Holdings; highest percentage of holdings for a Product and As Of Date is Rank 1, for example.</description>
        <label>Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SecurityDescription__c</fullName>
        <description>Set via integrations during create if applicable</description>
        <label>Security Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecurityId__c</fullName>
        <description>Set via integrations during create if applicable</description>
        <label>Security Id</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecurityName__c</fullName>
        <description>Set via integrations during create if applicable</description>
        <label>Security Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short__c</fullName>
        <label>Short</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <description>Used to sort rows with the same Product, Type, and As Of Date.  Set via integrations during create if applicable or by custom setting.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SourceFileName__c</fullName>
        <description>The name of the file used to load this product characteristics row.  Set during the integration.  Useful in conjunction with As Of Date for targeting deletes.</description>
        <label>Source File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Set by integration on create</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FundAdmin Characteristics File</fullName>
                </value>
                <value>
                    <fullName>FundAdmin Expenses File</fullName>
                </value>
                <value>
                    <fullName>IPM ASG Characteristics File</fullName>
                </value>
                <value>
                    <fullName>IPM LSMAI Characteristics File</fullName>
                </value>
                <value>
                    <fullName>IPM LSSA Characteristics File</fullName>
                </value>
                <value>
                    <fullName>IPM LSSFR Characteristics File</fullName>
                </value>
                <value>
                    <fullName>IPM McDonnell Characteristics File</fullName>
                </value>
                <value>
                    <fullName>IPM Mirova Characteristics File</fullName>
                </value>
                <value>
                    <fullName>IPM MPT Port Stats File</fullName>
                </value>
                <value>
                    <fullName>IPM NSFF Characteristics File</fullName>
                </value>
                <value>
                    <fullName>Loomis Characteristics File</fullName>
                </value>
                <value>
                    <fullName>State Street Top 10 Holdings File</fullName>
                </value>
                <value>
                    <fullName>FactSet Equity Characteristics File</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TurnoverDate__c</fullName>
        <label>Turnover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Turnover__c</fullName>
        <label>Turnover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Set via integrations during create.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Allocation</fullName>
                </value>
                <value>
                    <fullName>Asset Classes and Segments</fullName>
                </value>
                <value>
                    <fullName>Characteristics</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>Coupon</fullName>
                </value>
                <value>
                    <fullName>Coupon detail</fullName>
                </value>
                <value>
                    <fullName>Credit quality</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Duration</fullName>
                </value>
                <value>
                    <fullName>Duration detail</fullName>
                </value>
                <value>
                    <fullName>Environmental projects breakdown</fullName>
                </value>
                <value>
                    <fullName>ESG Opinion</fullName>
                </value>
                <value>
                    <fullName>Expenses</fullName>
                </value>
                <value>
                    <fullName>Exposure summary</fullName>
                </value>
                <value>
                    <fullName>Global Sector</fullName>
                </value>
                <value>
                    <fullName>Holdings</fullName>
                </value>
                <value>
                    <fullName>Industry</fullName>
                </value>
                <value>
                    <fullName>Long Positions</fullName>
                </value>
                <value>
                    <fullName>Market capitalization</fullName>
                </value>
                <value>
                    <fullName>Maturity</fullName>
                </value>
                <value>
                    <fullName>Maturity detail</fullName>
                </value>
                <value>
                    <fullName>Number of holdings</fullName>
                </value>
                <value>
                    <fullName>Portfolio composition</fullName>
                </value>
                <value>
                    <fullName>Portfolio exposures</fullName>
                </value>
                <value>
                    <fullName>Portfolio Factor Exposures Summary</fullName>
                </value>
                <value>
                    <fullName>Property Type</fullName>
                </value>
                <value>
                    <fullName>Region</fullName>
                </value>
                <value>
                    <fullName>Sector</fullName>
                </value>
                <value>
                    <fullName>Sector-LS</fullName>
                </value>
                <value>
                    <fullName>Short Positions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <description>Units associated with the product characteristic data row</description>
        <label>Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>Holds characteristics about products for the CDR</description>
    <label>Product Characteristic</label>
    <nameField>
        <displayFormat>PC-{0000000}</displayFormat>
        <label>Reference #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Characteristics</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>